--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
   schedule:
     # UTC时间，UTC+8时间需要在原时间上减去8
     - cron:  '10,20 2 * * *'
+    - cron:  '55 2 * * *'
 
 
   # Allows you to run this workflow manually from the Actions tab
